--- a/app/src/main/res/layout/service_photo_element.xml
+++ b/app/src/main/res/layout/service_photo_element.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
     android:theme="@style/allPages"
-    android:orientation="vertical"
     tools:context=".fragments.ServicePhotoElement">
-
-
-    <Button
-        android:id="@+id/cancelServicePhotoElement"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:text="x" />
 
     <ImageView
         android:id="@+id/imageServicePhotoElementImage"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         tools:src="@tools:sample/avatars" />
+
+    <Button
+        android:id="@+id/cancelServicePhotoElement"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="x" />
 </LinearLayout>
