--- a/app/src/main/res/layout/top_panel.xml
+++ b/app/src/main/res/layout/top_panel.xml
@@ -48,8 +48,10 @@
 
     <ImageView
         android:id="@+id/avatarTopPanelImage"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:layout_weight="1"
         android:visibility="gone"
         tools:srcCompat="@tools:sample/avatars" />
 
