--- a/app/src/main/res/layout/guest_service.xml
+++ b/app/src/main/res/layout/guest_service.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:theme="@style/allPages"
-    tools:context=".other.GuestService">
+    tools:context=".searchService.GuestService">
 
     <LinearLayout
         android:id="@+id/headerGuestServiceLayout"
@@ -14,160 +14,179 @@
         android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Верхняя часть весь текст: цена, название, рейтинг-->
-    <LinearLayout
-        android:id="@+id/guestLinearLayout"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/headerGuestServiceLayout">
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/footerGuestServiceLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/headerGuestServiceLayout"
+        android:layout_marginBottom="10dp">
 
         <LinearLayout
-            android:id="@+id/ratingGuestServiceLayout"
-            style="@style/block"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/block_text"
-            android:orientation="horizontal">
-
-            <TextView
-                style="@style/mainText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Рейтинг: " />
-
-            <TextView
-                android:id="@+id/withoutRatingText"
-                style="@style/defaultText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Оценок еще нет"
-                android:visibility="gone" />
-
-            <RatingBar
-                android:id="@+id/ratingBarGuestServiceRatingBar"
-                style="@android:style/Widget.Holo.RatingBar.Small"
-                android:layout_width="90dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:background="@color/white"
-                android:isIndicator="true"
-                android:padding="5dp"
-                android:visibility="gone" />
-
-            <TextView
-                android:id="@+id/avgRatingGuestServiceElementText"
-                style="@style/defaultText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:visibility="gone" />
-
-            <TextView
-                android:id="@+id/countOfRatesGuestServiceElementText"
-                style="@style/defaultText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="gone" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            style="@style/block"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/block_text">
-
-            <TextView
-                android:id="@+id/costGuestServiceText"
-                style="@style/mainText"
+            android:orientation="vertical">
+            <!-- Верхняя часть весь текст: цена, название, рейтинг-->
+            <LinearLayout
+                android:id="@+id/guestLinearLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-
-        <LinearLayout
-            style="@style/block"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/block_text">
-
-            <TextView
-                android:id="@+id/addressGuestServiceText"
-                style="@style/mainText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/block_text"
-            android:orientation="vertical"
-            style="@style/block">
-
-            <TextView
-                style="@style/mainText"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Описание:" />
-
-            <TextView
-                android:id="@+id/descriptionGuestServiceText"
-                style="@style/defaultText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-    </LinearLayout>
-
-    <!-- Нижняя часть фотографии и кнопка-->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/guestLinearLayout">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="10dp">
-
-            <HorizontalScrollView
-                android:id="@+id/horizontalScrollView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="2">
+                android:layout_margin="10dp"
+                android:orientation="vertical">
 
                 <LinearLayout
-                    android:id="@+id/feedGuestServiceLayout"
+                    android:id="@+id/ratingGuestServiceLayout"
+                    style="@style/block"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/block_text"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        style="@style/mainText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Рейтинг: " />
+
+                    <TextView
+                        android:id="@+id/withoutRatingText"
+                        style="@style/defaultText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Оценок еще нет"
+                        android:visibility="gone" />
+
+                    <RatingBar
+                        android:id="@+id/ratingBarGuestServiceRatingBar"
+                        style="@android:style/Widget.Holo.RatingBar.Small"
+                        android:layout_width="90dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="10dp"
+                        android:background="@color/white"
+                        android:isIndicator="true"
+                        android:padding="5dp"
+                        android:visibility="gone" />
+
+                    <TextView
+                        android:id="@+id/avgRatingGuestServiceElementText"
+                        style="@style/defaultText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:visibility="gone" />
+
+                    <TextView
+                        android:id="@+id/countOfRatesGuestServiceElementText"
+                        style="@style/defaultText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    style="@style/block"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/block_text">
+
+                    <TextView
+                        android:id="@+id/costGuestServiceText"
+                        style="@style/mainText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+
+                <LinearLayout
+                    style="@style/block"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/block_text">
+
+                    <TextView
+                        android:id="@+id/addressGuestServiceText"
+                        style="@style/mainText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+
+                <LinearLayout
+                    style="@style/block"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/block_text"
+                    android:orientation="vertical">
+
+                    <TextView
+                        style="@style/mainText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Описание:" />
+
+                    <TextView
+                        android:id="@+id/descriptionGuestServiceText"
+                        style="@style/defaultText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
+            </LinearLayout>
+
+            <!-- Нижняя часть фотографии и кнопка-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintTop_toBottomOf="@+id/guestLinearLayout">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:orientation="horizontal">
+
+                    <HorizontalScrollView
+                        android:id="@+id/horizontalScrollView2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2">
+
+                        <LinearLayout
+                            android:id="@+id/feedGuestServiceLayout"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                        </LinearLayout>
+                    </HorizontalScrollView>
+
+                    <Button
+                        android:id="@+id/premiumGuestServiceBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Премиум"
+                        android:visibility="gone" />
+                </LinearLayout>
+
+                <Button
+                    android:id="@+id/editScheduleGuestServiceBtn"
+                    style="@style/mainButtonOther"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                </LinearLayout>
-            </HorizontalScrollView>
+                    android:layout_gravity="center" />
+            </LinearLayout>
 
-            <Button
-                android:id="@+id/premiumGuestServiceBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Премиум"
-                android:visibility="gone" />
         </LinearLayout>
-
-        <Button
-            android:id="@+id/editScheduleGuestServiceBtn"
-            style="@style/mainButtonOther"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center" />
-    </LinearLayout>
+    </ScrollView>
 
     <LinearLayout
         android:id="@+id/footerGuestServiceLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
