--- a/app/src/main/res/layout/premium.xml
+++ b/app/src/main/res/layout/premium.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     style="@style/allPages"
-    tools:context=".other.Premium">
+    tools:context=".searchService.Premium">
 
     <Button
         android:id="@+id/setPremiumPremiumBtn"
