--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -4,169 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".other.Profile"
-    android:theme="@style/allPages">
-
-    <Button
-        android:id="@+id/addServicesProfileBtn"
-        android:layout_width="100dp"
-        android:layout_height="60dp"
-        android:text="@string/addServices"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.022"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/orderProfileScroll"
-        app:layout_constraintVertical_bias="0.1" />
-
-    <Button
-        android:id="@+id/subscriptionsProfileBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Подписки"
-        app:layout_constraintBottom_toTopOf="@+id/orderProfileScroll"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.85"
-        app:layout_constraintStart_toEndOf="@+id/avatarProfileImage"
-        app:layout_constraintTop_toBottomOf="@+id/logOutProfileBtn"
-        app:layout_constraintVertical_bias="0.1" />
-
-    <Button
-        android:id="@+id/subscribersProfileBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Подписчики"
-        app:layout_constraintBottom_toTopOf="@+id/orderProfileScroll"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.862"
-        app:layout_constraintStart_toEndOf="@+id/avatarProfileImage"
-        app:layout_constraintTop_toBottomOf="@+id/subscriptionsProfileBtn"
-        app:layout_constraintVertical_bias="0.04" />
-
-    <android.support.v7.widget.SwitchCompat
-        android:id="@+id/servicesOrOrdersProfileSwitch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:checked="false"
-        android:text="My orders"
-        android:textOff="OFF"
-        android:textOn="ON"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.962"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/servicesProfileScroll"
-        app:layout_constraintVertical_bias="0.102"
-        app:showText="true" />
-
-    <ScrollView
-        android:id="@+id/servicesProfileScroll"
-        android:layout_width="317dp"
-        android:layout_height="148dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.461">
-
-        <LinearLayout
-            android:id="@+id/servicesProfileLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/yellow1"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="parent" />
-
-    </ScrollView>
-
-    <ScrollView
-        android:id="@+id/orderProfileScroll"
-        android:layout_width="315dp"
-        android:layout_height="146dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.457">
-
-        <LinearLayout
-            android:id="@+id/ordersProfileLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/white"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="parent" />
-
-    </ScrollView>
-
-    <TextView
-        android:id="@+id/nameProfileText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="8dp"
-        android:text="TextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerProfileLayout" />
-
-    <TextView
-        android:id="@+id/cityProfileText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="8dp"
-        android:text="TextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameProfileText" />
-
-    <LinearLayout
-        android:id="@+id/ratingLayout"
-        android:layout_width="249dp"
-        android:layout_height="105dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/footerProfileLayout"
-        app:layout_constraintEnd_toStartOf="@+id/servicesOrOrdersProfileSwitch"
-        app:layout_constraintHorizontal_bias="0.376"
-        app:layout_constraintStart_toEndOf="@+id/addServicesProfileBtn"
-        app:layout_constraintTop_toBottomOf="@+id/orderProfileScroll"
-        app:layout_constraintVertical_bias="0.83">
-
-        <TextView
-            android:id="@+id/withoutRatingProfileText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Оценок еще нет"
-            android:visibility="invisible" />
-
-    </LinearLayout>
+    android:theme="@style/allPages"
+    tools:context=".other.Profile">
 
     <LinearLayout
         android:id="@+id/headerProfileLayout"
@@ -174,6 +13,134 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent">
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/headerProfileLayout">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="1">
+
+                <ImageView
+                    android:id="@+id/avatarProfileImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginBottom="8dp"
+                    tools:srcCompat="@tools:sample/avatars" />
+
+                <LinearLayout
+                    android:id="@+id/ratingLayout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/withoutRatingProfileText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Оценок еще нет"
+                        android:layout_gravity="center"/>
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="2">
+
+                <TextView
+                    android:id="@+id/nameProfileText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginLeft="32dp"
+                    android:layout_marginTop="8dp"
+                    android:text="TextView" />
+
+                <TextView
+                    android:id="@+id/cityProfileText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginLeft="32dp"
+                    android:layout_marginTop="8dp"
+                    android:text="TextView" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/addServicesProfileBtn"
+            android:layout_width="100dp"
+            android:layout_height="60dp"
+            android:text="@string/addServices" />
+
+        <Button
+            android:id="@+id/subscriptionsProfileBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Подписки" />
+
+        <Button
+            android:id="@+id/subscribersProfileBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Подписчики" />
+
+        <ScrollView
+            android:id="@+id/servicesProfileScroll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:id="@+id/servicesProfileLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/yellow1"
+                android:orientation="vertical" />
+
+        </ScrollView>
+
+        <ScrollView
+            android:id="@+id/orderProfileScroll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:id="@+id/ordersProfileLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white"
+                android:orientation="vertical" />
+        </ScrollView>
+
+        <android.support.v7.widget.SwitchCompat
+            android:id="@+id/servicesOrOrdersProfileSwitch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:checked="false"
+            android:text="My orders"
+            android:textOff="OFF"
+            android:textOn="ON"
+            app:showText="true"
+            android:layout_gravity="center"/>
 
     </LinearLayout>
 
@@ -182,24 +149,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent">
-    </LinearLayout>
-
-    <ImageView
-        android:id="@+id/avatarProfileImage"
-        android:layout_width="149dp"
-        android:layout_height="121dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/orderProfileScroll"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerProfileLayout"
-        tools:srcCompat="@tools:sample/avatars" />
-
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
