--- a/app/src/main/res/layout/edit_profile.xml
+++ b/app/src/main/res/layout/edit_profile.xml
@@ -44,7 +44,7 @@
                     android:id="@+id/logOutEditProfileBtn"
                     style="@style/smallMainButtonOther"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="36dp"
                     android:text="@string/logOut" />
             </LinearLayout>
         </LinearLayout>
