--- a/app/src/main/res/layout/found_service_profile_element.xml
+++ b/app/src/main/res/layout/found_service_profile_element.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/foundServiceProfileElementLayout"
+    style="@style/block"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/profile_block"
     android:orientation="horizontal"
-    android:theme="@style/allPages"
-    tools:context=".fragments.foundElements.foundServiceProfileElement">
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/serviceNameFoundServiceProfileElementText"
+        style="@style/foundProfileElement"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="TextView"
-        android:textSize="18sp" />
+        android:text="TextView" />
 
     <RatingBar
         android:id="@+id/ratingBarFondServiceProfileElement"
+        style="?android:attr/ratingBarStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:isIndicator="true"
-        style="?android:attr/ratingBarStyleSmall"
-        />
+        android:isIndicator="true" />
 </LinearLayout>
