--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -13,105 +13,106 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent">
+
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_margin="10dp"
         android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/footerProfileLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/headerProfileLayout">
 
+        <!-- Верхняя часть-->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/avatarProfileImage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginBottom="8dp"
+                    android:layout_gravity="center"
                     tools:srcCompat="@tools:sample/avatars" />
 
                 <LinearLayout
                     android:id="@+id/ratingLayout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:orientation="vertical">
+
                     <TextView
                         android:id="@+id/withoutRatingProfileText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Оценок еще нет"
-                        android:layout_gravity="center"/>
+                        android:text="Оценок еще нет" />
                 </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_weight="2">
+                android:layout_weight="1"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/nameProfileText"
+                    style="@style/mainTextProfile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginLeft="32dp"
-                    android:layout_marginTop="8dp"
                     android:text="TextView" />
 
                 <TextView
                     android:id="@+id/cityProfileText"
+                    style="@style/defaultTextProfile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginLeft="32dp"
-                    android:layout_marginTop="8dp"
                     android:text="TextView" />
+
+                <TextView
+                    android:id="@+id/phoneProfileText"
+                    style="@style/defaultTextProfile"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
+                <TextView
+                    android:id="@+id/subscribersProfileText"
+                    style="@style/defaultTextProfile"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
+
+                <Button
+                    android:layout_marginTop="5dp"
+                    android:id="@+id/subscriptionsProfileBtn"
+                    style="@style/smallMainButtonOther"
+                    android:layout_width="wrap_content"
+                    android:layout_height="36dp"
+                    android:text="Подписки" />
+
             </LinearLayout>
         </LinearLayout>
-
-        <Button
-            android:id="@+id/addServicesProfileBtn"
-            android:layout_width="100dp"
-            android:layout_height="60dp"
-            android:text="@string/addServices" />
-
-        <Button
-            android:id="@+id/subscriptionsProfileBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Подписки" />
-
-        <Button
-            android:id="@+id/subscribersProfileBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="Подписчики" />
 
         <ScrollView
             android:id="@+id/servicesProfileScroll"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="200dp">
 
             <LinearLayout
                 android:id="@+id/servicesProfileLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/yellow1"
                 android:orientation="vertical" />
 
         </ScrollView>
@@ -119,15 +120,21 @@
         <ScrollView
             android:id="@+id/orderProfileScroll"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="200dp">
 
             <LinearLayout
                 android:id="@+id/ordersProfileLayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/white"
+                android:layout_height="wrap_content"
                 android:orientation="vertical" />
         </ScrollView>
+
+        <Button
+            android:id="@+id/addServicesProfileBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/addServices" />
 
         <android.support.v7.widget.SwitchCompat
             android:id="@+id/servicesOrOrdersProfileSwitch"
@@ -135,12 +142,12 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
+            android:layout_gravity="center"
             android:checked="false"
             android:text="My orders"
             android:textOff="OFF"
             android:textOn="ON"
-            app:showText="true"
-            android:layout_gravity="center"/>
+            app:showText="true" />
 
     </LinearLayout>
 
