--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -44,7 +44,8 @@
 
     <style name="smallMainButtonOther" parent="mainButton">
         <item name="android:background">@drawable/main_button</item>
-        <item name="android:width">125dp</item>
+        <item name="android:width">162dp</item>
+        <item name="android:height">36dp</item>
     </style>
 
     <!-- Style for extra text -->
@@ -105,11 +106,31 @@
         <item name="android:textSize">14sp</item>
     </style>
 
+    <style name="defaultTextProfile">
+        <item name="fontFamily">@font/roboto_black</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:padding">5dp</item>
+    </style>
+
+    <style name="mainTextProfile">
+        <item name="android:textColor">@color/black</item>
+        <item name="fontFamily">@font/roboto_bold</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:padding">5dp</item>
+    </style>
+
+    <style name="foundProfileElement">
+        <item name="android:textColor">@color/panelColor</item>
+        <item name="fontFamily">@font/roboto_bold</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:padding">5dp</item>
+    </style>
     <!-- Style for block style -->
     <style name="block" >
         <item name="android:elevation">5dp</item>
         <item name="android:layout_marginBottom">10dp</item>
     </style>
+
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
