--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -131,8 +131,9 @@
 
         <Button
             android:id="@+id/addServicesProfileBtn"
+            style="@style/smallMainButtonOther"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="36dp"
             android:layout_gravity="center"
             android:text="@string/addServices" />
 
