--- a/app/src/main/res/layout/add_service.xml
+++ b/app/src/main/res/layout/add_service.xml
@@ -19,7 +19,10 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/headerAddServiceLayout">
+        app:layout_constraintTop_toBottomOf="@+id/headerAddServiceLayout"
+        app:layout_constraintBottom_toTopOf="@+id/footerAddServiceLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
             style="@style/block"
@@ -32,7 +35,6 @@
                 style="@style/mainText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@android:color/transparent"
                 android:hint="@string/nameAddServiceTB"
                 android:inputType="textPersonName|textCapWords" />
         </LinearLayout>
@@ -48,7 +50,6 @@
                 style="@style/mainText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@android:color/transparent"
                 android:hint="@string/costAddServiceTB"
                 android:inputType="number" />
         </LinearLayout>
@@ -64,7 +65,6 @@
                 style="@style/mainText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@android:color/transparent"
                 android:hint="Адрес"
                 android:inputType="textPersonName|textCapWords" />
         </LinearLayout>
@@ -107,7 +107,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:backgroundTint="@android:color/transparent"
                 android:hint="Описание"
                 android:inputType="textMultiLine" />
         </LinearLayout>
@@ -145,7 +144,7 @@
     <LinearLayout
         android:id="@+id/footerAddServiceLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/bottom_panel_height"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent" />
 </android.support.constraint.ConstraintLayout>
