--- a/app/src/main/res/layout/found_service_element.xml
+++ b/app/src/main/res/layout/found_service_element.xml
@@ -10,8 +10,8 @@
     android:padding="10dp">
 
     <LinearLayout
-        android:layout_width="65dp"
-        android:layout_height="65dp"
+        android:layout_width="@dimen/photo_avatar_width"
+        android:layout_height="@dimen/photo_avatar_height"
         android:layout_marginEnd="10dp">
 
         <ImageView
