--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -40,8 +40,8 @@
 
                 <ImageView
                     android:id="@+id/avatarProfileImage"
-                    android:layout_width="125dp"
-                    android:layout_height="125dp"
+                    android:layout_width="@dimen/photo_width"
+                    android:layout_height="@dimen/photo_height"
                     android:layout_gravity="center"
                     tools:srcCompat="@tools:sample/avatars" />
 
