--- a/app/src/main/res/layout/subscription_element.xml
+++ b/app/src/main/res/layout/subscription_element.xml
@@ -1,35 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:layout_margin="20dp"
-tools:context=".fragments.SubscriptionElement">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/subscriptionElementLayout"
+    xmlns:tools="http://schemas.android.com/tools"
+    style="@style/block"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="20dp"
+    android:background="@drawable/block_text"
+    android:padding="10dp"
+    tools:context=".fragments.SubscriptionElement">
 
     <ImageView
         android:id="@+id/avatarSubscriptionElementImage"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_margin="20dp"
-        android:layout_weight="1"
+        android:layout_width="@dimen/photo_avatar_width"
+        android:layout_height="@dimen/photo_avatar_height"
+        android:layout_gravity="center"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/workerNameSubscriptionElementText"
+        style="@style/mainText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_gravity="center"
         android:layout_weight="1"
-        android:text="@string/name"
-        android:textSize="18sp" />
+        android:gravity="center"
+        android:text="@string/name" />
 
-    <Button
-        android:id="@+id/subscribeSubscriptionElementBtn"
+    <TextView
+        android:id="@+id/subscribeSubscriptionElementText"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:layout_weight="1"
-        android:text="@string/subscribed" />
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:textColor="@color/red"
+        android:textSize="25sp"
+        android:fontFamily="@font/font_awesome_solid"
+        android:text="@string/subscribe_heart" />
 
 </LinearLayout>
