--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="white">#FFFFFF</color>
     <color name = "mainColorBG">#D1E1E5</color>
     <color name="black">#000000</color>
+    <color name="red">#FF0000</color>
 
     <color name="logInBackGround">#0093B7</color>
 
