--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -96,6 +96,7 @@
     <style name="mainText" parent="TextOnPages">
         <item name="android:textSize">20sp</item>
         <item name="android:padding">10dp</item>
+        <item name="android:backgroundTint">@android:color/transparent</item>
     </style>
 
     <style name="mainTextMainScreen" parent="TextOnPages">
