--- a/app/src/main/res/layout/message_order_element.xml
+++ b/app/src/main/res/layout/message_order_element.xml
@@ -1,20 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/block"
+    android:id="@+id/messageOrderElementLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/block_text"
     android:orientation="vertical"
-    tools:context=".fragments.chatElements.MessageOrderElement">
+    tools:context=".fragments.chatElements.MessageOrderElement"
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/messageMessageOrderElementText"
+        style="@style/defaultText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="TextView" />
+        android:text="" />
 
     <Button
         android:id="@+id/canceledMessageOrderElementBtn"
+        style="@style/smallMainButtonOther"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
