--- a/app/src/main/res/layout/message_review_element.xml
+++ b/app/src/main/res/layout/message_review_element.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/messageReviewElementLayout"
+    style="@style/block"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/block_text"
     android:orientation="vertical"
-    tools:context=".fragments.chatElements.MessageReviewElement">
+    tools:context=".fragments.chatElements.MessageReviewElement"
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/messageMessageReviewElementText"
+        style="@style/defaultText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="TextView" />
+        android:text="" />
 
     <Button
         android:id="@+id/reviewMessageReviewElementBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        style="@style/smallMainButtonOther"
         android:text="@string/rate" />
 </LinearLayout>
