--- a/app/src/main/res/layout/comments.xml
+++ b/app/src/main/res/layout/comments.xml
@@ -7,9 +7,17 @@
     tools:context=".reviews.Comments"
     style="@style/allPages">
 
+    <LinearLayout
+        android:id="@+id/headerCommentsLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="441dp"
+        android:layout_height="0dp"
+        android:layout_margin="10dp"
         app:layout_constraintBottom_toTopOf="@+id/footerCommentsLayout"
         app:layout_constraintTop_toBottomOf="@+id/headerCommentsLayout">
 
@@ -20,17 +28,11 @@
             android:orientation="vertical" />
     </ScrollView>
 
-    <LinearLayout
-        android:id="@+id/headerCommentsLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/footerCommentsLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/bottom_panel_height"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent" />
 </android.support.constraint.ConstraintLayout>
