--- a/app/src/main/res/layout/found_service_profile_element.xml
+++ b/app/src/main/res/layout/found_service_profile_element.xml
@@ -22,5 +22,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:theme="@style/ratingBarColors"
         android:isIndicator="true" />
 </LinearLayout>
