--- a/app/src/main/res/layout/guest_service.xml
+++ b/app/src/main/res/layout/guest_service.xml
@@ -17,11 +17,11 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toTopOf="@+id/footerGuestServiceLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerGuestServiceLayout"
-        android:layout_marginBottom="10dp">
+        app:layout_constraintTop_toBottomOf="@+id/headerGuestServiceLayout">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -67,6 +67,7 @@
                         android:background="@color/white"
                         android:isIndicator="true"
                         android:padding="5dp"
+                        android:theme="@style/ratingBarColors"
                         android:visibility="gone" />
 
                     <TextView
@@ -123,19 +124,19 @@
                         style="@style/mainText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Описание:"
-                        android:padding="0dp"
+                        android:layout_marginStart="10dp"
                         android:layout_marginTop="10dp"
-                        android:layout_marginStart="10dp"/>
+                        android:padding="0dp"
+                        android:text="Описание:" />
 
                     <TextView
                         android:id="@+id/descriptionGuestServiceText"
                         style="@style/defaultText"
-                        android:padding="0dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
                         android:layout_marginBottom="10dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:padding="0dp" />
 
                 </LinearLayout>
             </LinearLayout>
