--- a/app/src/main/res/layout/picked_comment.xml
+++ b/app/src/main/res/layout/picked_comment.xml
@@ -57,9 +57,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:isIndicator="true"
-                android:numStars="5"
-                android:stepSize="1"
-                android:theme="@style/myRatingBar" />
+                android:theme="@style/ratingBarColors"/>
         </LinearLayout>
 
 
