--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,6 @@
     <dimen name="photo_avatar_height">65dp</dimen>
 
     <dimen name="bottom_panel_height">60dp</dimen>
+
+    <dimen name="main_button_height">36dp</dimen>
 </resources>
