--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,6 +34,8 @@
         <item name="android:elevation">5dp</item>
     </style>
 
+
+
     <style name="mainButtonLogIn" parent="mainButton">
         <item name="android:background">@drawable/main_button_login_background</item>
     </style>
@@ -59,6 +61,13 @@
         <item name="android:progressDrawable">@drawable/ratingbar_selector</item>
         <item name="android:minHeight">50dp</item>
         <item name="android:maxHeight">50dp</item>
+    </style>
+
+    <style name="buttonText" parent="@android:style/Widget.RatingBar">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="fontFamily">@font/roboto_bold</item>
     </style>
 
     <!-- Style for icons -->
@@ -110,7 +119,7 @@
     <style name="defaultTextProfile">
         <item name="fontFamily">@font/roboto_black</item>
         <item name="android:textSize">18sp</item>
-        <item name="android:padding">3dp</item>
+        <item name="android:padding">2dp</item>
     </style>
 
     <style name="mainTextProfile">
@@ -132,13 +141,16 @@
         <item name="android:layout_marginBottom">10dp</item>
     </style>
 
-    <style name="myRatingBar" parent="Theme.AppCompat">
-        <item name="colorControlNormal">@color/black</item>
-        <item name="colorControlActivated">@color/white</item>
+    <style name="ratingBarColors" parent="@android:style/Widget.RatingBar">
+        <item name="android:progressBackgroundTint">@color/black</item>
+        <item name="android:secondaryProgressTint">@color/black</item>
+        <item name="android:progressTint">@color/yellow</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+
 
 </resources>
