--- a/app/src/main/res/layout/edit_service.xml
+++ b/app/src/main/res/layout/edit_service.xml
@@ -94,7 +94,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:entries="@array/category" />
+                    android:background="@color/panelColor"
+                    android:backgroundTint="@color/panelColor"
+                    android:popupBackground="@color/panelColor"
+                    android:entries="@array/categoryForEditService" />
             </LinearLayout>
 
             <LinearLayout
