--- a/app/src/main/res/layout/review.xml
+++ b/app/src/main/res/layout/review.xml
@@ -55,7 +55,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:hint="Отзыв"
-                android:inputType="textMultiLine" />
+                android:inputType="textMultiLine|textCapSentences" />
         </LinearLayout>
 
         <Button
