--- a/app/src/main/res/layout/registration.xml
+++ b/app/src/main/res/layout/registration.xml
@@ -2,9 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/LogInPages"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    style="@style/LogInPages"
     android:orientation="vertical"
     tools:context=".logIn.Registration">
 
@@ -17,62 +17,46 @@
 
     <EditText
         android:id="@+id/phoneRegistrationInput"
+        style="@style/lightTextForPhone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:backgroundTint="@color/lightText"
-        android:ems="10"
         android:enabled="false"
-        android:hint="@string/phoneRegistration"
-        android:inputType="phone"
-        android:textColor="@color/white"
-        android:textColorHint="@color/lightText" />
+        android:hint="@string/phoneRegistration" />
 
     <EditText
         android:id="@+id/nameRegistrationInput"
+        style="@style/lightTextForText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="45dp"
-        android:backgroundTint="@color/lightText"
-        android:ems="10"
-        android:hint="@string/nameRegistration"
-        android:inputType="textCapWords"
-        android:textColor="@color/white"
-        android:textColorHint="@color/lightText" />
+        android:hint="@string/nameRegistration" />
 
     <EditText
         android:id="@+id/surnameRegistrationInput"
+        style="@style/lightTextForText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:backgroundTint="@color/lightText"
-        android:ems="10"
-        android:hint="@string/surname"
-        android:inputType="textPersonName|textCapWords"
-        android:textColor="@color/white"
-        android:textColorHint="@color/lightText" />
+        android:hint="@string/surname" />
 
     <EditText
         android:id="@+id/cityRegistrationInput"
+        style="@style/lightTextForText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:backgroundTint="@color/lightText"
-        android:ems="10"
-        android:hint="@string/cityRegistration"
-        android:inputType="textPersonName|textCapWords"
-        android:textColor="@color/white"
-        android:textColorHint="@color/lightText" />
+        android:hint="@string/cityRegistration" />
 
     <Button
         android:id="@+id/saveDataRegistrationBtn"
+        style="@style/mainButtonLogIn"
         android:layout_width="240dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
-        android:text="@string/saveData"
         android:gravity="center"
-        style="@style/mainButtonLogIn"/>
+        android:text="@string/saveData" />
 
 </LinearLayout>
