--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -68,6 +68,23 @@
         <item name="fontFamily">@font/roboto_bold</item>
     </style>
 
+    <style name="lightText">
+        <item name="android:backgroundTint">@color/lightText</item>
+        <item name="android:inputType">textPersonName|textCapWords</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:ems">10</item>
+        <item name="android:textColorHint">@color/lightText</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="lightTextForText" parent="lightText">
+        <item name="android:inputType">textPersonName|textCapWords</item>
+    </style>
+
+    <style name="lightTextForPhone" parent="lightText">
+        <item name="android:inputType">phone</item>
+    </style>
+
     <!-- Style for icons -->
     <style name="textItem" >
         <item name="android:textSize">20sp</item>
@@ -103,6 +120,7 @@
     <style name="mainText" parent="TextOnPages">
         <item name="android:textSize">20sp</item>
         <item name="android:padding">10dp</item>
+        <item name="android:inputType">textPersonName|textCapSentences</item>
         <item name="android:backgroundTint">@android:color/transparent</item>
     </style>
 
