новый свичер и верстка кнопок календаря

--- a/app/src/main/res/layout/my_time.xml
+++ b/app/src/main/res/layout/my_time.xml
@@ -20,29 +20,26 @@
         android:id="@+id/saveMyTimeBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Сохранить"
         app:layout_constraintBottom_toTopOf="@+id/footerMyTimeLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerMyTimeLayout"
-        app:layout_constraintVertical_bias="0.9" />
+        app:layout_constraintTop_toTopOf="@+id/swicherMyTimeLayout" />
 
-    <android.support.v7.widget.SwitchCompat
-        android:id="@+id/amOrPmMyTimeSwitch"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/swicherMyTimeLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:checked="false"
-        android:text="Первая половина дня"
-        android:textOff="AM"
-        android:textOn="PM"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:gravity="center"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/footerMyTimeLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/headerMyTimeLayout"
-        app:layout_constraintVertical_bias="0.8"
-        app:showText="true" />
+        app:layout_constraintVertical_bias="0.8" />
 
     <LinearLayout
         android:id="@+id/headerMyTimeLayout"
