--- a/app/src/main/res/drawable/disabled_button.xml
+++ b/app/src/main/res/drawable/disabled_button.xml
@@ -2,60 +2,19 @@
 <selector
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_pressed="true" >
-        <shape>
-            <gradient
-                android:startColor="@color/disabledButton"
-                android:endColor="@color/disabledButton"
-                android:angle="270" />
-            <stroke
-                android:width="3dp"
-                android:color="@color/grey05" />
-            <corners
-                android:radius="3dp" />
-            <padding
-                android:left="10dp"
-                android:top="10dp"
-                android:right="10dp"
-                android:bottom="10dp" />
-        </shape>
-    </item>
-
-    <item android:state_focused="true" >
-        <shape>
-            <gradient
-                android:endColor="@color/disabledButton"
-                android:startColor="@color/disabledButton"
-                android:angle="270" />
-            <stroke
-                android:width="3dp"
-                android:color="@color/grey05" />
-            <corners
-                android:radius="3dp" />
-            <padding
-                android:left="10dp"
-                android:top="10dp"
-                android:right="10dp"
-                android:bottom="10dp" />
-        </shape>
-    </item>
-
     <item>
         <shape>
-            <gradient
-                android:endColor="@color/disabledButton"
-                android:startColor="@color/disabledButton"
-                android:angle="270" />
+            <solid android:color="@color/disabledButton"/>
             <stroke
                 android:width="3dp"
                 android:color="@color/grey05" />
             <corners
-                android:radius="3dp" />
+                android:radius="8dp" />
             <padding
-                android:left="10dp"
-                android:top="10dp"
-                android:right="10dp"
-                android:bottom="10dp" />
+                android:top="5dp"
+                android:bottom="5dp"
+                android:left="5dp"
+                android:right="5dp"/>
         </shape>
     </item>
 </selector>
