убраны у скорллов скроллбары

--- a/app/src/main/res/layout/messages.xml
+++ b/app/src/main/res/layout/messages.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".chat.Messages"
-    android:theme="@style/allPages">
+    android:theme="@style/allPages"
+    tools:context=".chat.Messages">
+
     <LinearLayout
         android:id="@+id/headerEditServiceLayout"
         android:layout_width="match_parent"
@@ -17,10 +17,11 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:scrollbars="none"
         app:layout_constraintBottom_toTopOf="@+id/footerEditServiceLayout"
-        app:layout_constraintTop_toBottomOf="@+id/headerEditServiceLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/headerEditServiceLayout">
 
         <LinearLayout
             android:id="@+id/resultsMessagesLayout"
