--- a/app/src/main/res/layout/add_service.xml
+++ b/app/src/main/res/layout/add_service.xml
@@ -19,6 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="10dp"
+        android:scrollbars="none"
         app:layout_constraintBottom_toTopOf="@+id/footerAddServiceLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -122,6 +123,7 @@
             <HorizontalScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:scrollbars="none"
                 android:layout_marginTop="10dp">
 
                 <LinearLayout
