--- a/app/src/main/res/layout/comments.xml
+++ b/app/src/main/res/layout/comments.xml
@@ -18,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="10dp"
+        android:scrollbars="none"
         app:layout_constraintBottom_toTopOf="@+id/footerCommentsLayout"
         app:layout_constraintTop_toBottomOf="@+id/headerCommentsLayout">
 
