--- a/app/src/main/res/layout/dialogs.xml
+++ b/app/src/main/res/layout/dialogs.xml
@@ -18,6 +18,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:scrollbars="none"
         app:layout_constraintTop_toBottomOf="@+id/headerDialogsLayout"
         app:layout_constraintBottom_toTopOf="@+id/footerDialogsLayout"
         app:layout_constraintEnd_toEndOf="parent"
