--- a/app/src/main/res/layout/picked_comment.xml
+++ b/app/src/main/res/layout/picked_comment.xml
@@ -65,7 +65,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="200dp">
+        android:layout_height="200dp"
+        android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="match_parent"
