--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -127,7 +127,7 @@
                         android:layout_height="@dimen/main_button_height"
                         android:gravity="center"
                         android:text="Оценок еще нет"
-                        android:visibility="gone"/>
+                        android:visibility="gone" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -145,9 +145,7 @@
                         android:layout_height="36dp"
                         android:gravity="center"
                         android:text="Подписки" />
-
                 </LinearLayout>
-
             </LinearLayout>
         </LinearLayout>
 
@@ -168,6 +166,7 @@
         android:id="@+id/servicesProfileScroll"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:scrollbars="none"
         app:layout_constraintBottom_toTopOf="@+id/orderProfileScroll"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -199,6 +198,7 @@
         android:id="@+id/orderProfileScroll"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:scrollbars="none"
         app:layout_constraintBottom_toTopOf="@+id/footerProfileLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
