--- a/app/src/main/res/layout/main_screen.xml
+++ b/app/src/main/res/layout/main_screen.xml
@@ -52,7 +52,15 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:isScrollContainer="true"
-            android:orientation="vertical" />
+            android:orientation="vertical" >
+            <ProgressBar
+                android:id="@+id/progressBarMainScreen"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:indeterminateTint= "@color/black"
+                android:layout_gravity="center"
+                />
+        </LinearLayout>
     </ScrollView>
 
     <LinearLayout
