--- a/app/src/main/res/layout/verify_phone.xml
+++ b/app/src/main/res/layout/verify_phone.xml
@@ -74,4 +74,13 @@
         android:layout_marginTop="50dp"
         android:text="@string/change_number"
         android:textColor="@color/white" />
+
+    <ProgressBar
+        android:id="@+id/progressBarVerifyCode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateTint= "@color/black"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        />
 </LinearLayout>
